apps/media/jellyseer/service-jellyseer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyseerr
  name: jellyseerr
spec:
  ports:
    - port: 5055
      targetPort: 5055
  selector:
    app: jellyseerr
