apps/media/jellyseer/ingress-jellyseer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer
spec:
  ingressClassName: nginx
  rules:
  - host: jellyseer.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: jellyseer
            port:
              number: 5055
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - jellyseer.almothana.xyz
      secretName: almothana-xyz-tls
